# sig-parser-generator

./: CMakeLists.txt  README.md
src/: main.cpp
src/codegen/: CodeGenerator.cpp  CodeGenerator.h
src/lexer/: Categories.cpp  Categories.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parser/: Parser.cpp  Parser.h
src/parser/nodes/: ASTNode.cpp  ASTNode.h  ASTVisitor.cpp  ASTVisitor.h  AliasDeclarationNode.cpp  AliasDeclarationNode.h  AmbiguousRuleNode.cpp  AmbiguousRuleNode.h  DeclarationsNode.cpp  DeclarationsNode.h  RuleDeclarationNode.cpp  RuleDeclarationNode.h  RuleDefinitionNode.cpp  RuleDefinitionNode.h  RuleNode.cpp  RuleNode.h  RuleRecursiveCallNode.cpp  RuleRecursiveCallNode.h  RunHandlerNode.cpp  RunHandlerNode.h  TokenScanningRuleNode.cpp  TokenScanningRuleNode.h
src/test/: bnf-like.grammar  struct_mapping.h
src/util/: RuleDeclarationsTable.cpp  RuleDeclarationsTable.h  Table.h
